// This is the public API offered by the shopping cart entity.

syntax = "proto3";

package com.example.shoppingcart; // <2>

import "akkaserverless/annotations.proto"; // <1>
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option java_outer_classname = "ShoppingCartApi"; // <3>

message AddLineItem { // <4>
  string cart_id = 1 [(akkaserverless.field).entity_key = true]; // <5>
  string product_id = 2;
  string name = 3;
  int32 quantity = 4;
}

service ShoppingCartService { 
  option (akkaserverless.service) = { 
    type: SERVICE_TYPE_ENTITY
    component: ".domain.ShoppingCart"
  };

  rpc AddItem (AddLineItem) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/cart/{cart_id}/items/add"
      body: "*"
    };
  }
}
